Fixes not showing all categories

--- a/creative-business/style.css
+++ b/creative-business/style.css
@@ -23,7 +23,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
 :root {
-    --primary-color: #ff0000;
+    --primary-color: #f11;
     --header-color: #ffffff;
     --secondary-color: #2ac59f;
     --department-bg-color: #333333;
